# portfolio-ai-stack

./: .env.example  .gitignore  Above‑Avg-Table 1.csv  Below‑Avg-Table 1.csv  Dockerfile.old  ETF_DATA_README.md  High-Table 1.csv  IMPLEMENTATION_SUMMARY.md  Low-Table 1.csv  Moderate-Table 1.csv  README-LangSmith.md  README.md  README_CACHE.md  README_DOCUMENT_PROCESSING.md  README_FULL_SETUP.md  README_LANGGRAPH.md  README_RAG.md  add_fund_knowledge.py  app.py  check_modules.py  current_architecture.md  demo.py  docker-compose.yml  etf_registry_test.py  etf_tickers.json  financial_analysis_class_test.json  generate_dataflow_diagram.py  ingest_etf_knowledge.py  init_chatbot.py  nixpacks.toml  package-lock.json  package.json  portfolio_advisor.py  portfolio_flow_diagram  pyproject.toml  railway.toml  requirements.txt  simple_finance_result.json  start_api.py  test_api_auth.py  (+7 more)
apps/api/: .env.example  (+1 more)
cli/: check_api_key.py
config/: config.yaml
data/: etf_metadata.json
db/: cedric_schema.sql  schema_sim.sql
docs/: generate_diagram.py  o3_mini_high_implementation.md
examples/: document_processing_examples.py
logs/: query_20250320_021318.json  query_20250320_021526.json  query_20250320_021639.json  query_20250320_021807.json  query_20250320_021835.json
portfolio_ai_stack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
profiles/: aggressive.json  conservative.json
scripts/: parse_glide_path.py  setup_preset_data.py
src/: __init__.py  debug_cache.py  final_cache_test.py  test_cache.py
tests/: test_alpaca_client.py  test_caching.py  test_langgraph.py
(+187 files in other folders)
