[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-ai-stack"
version = "0.1.0"
description = "AI-powered portfolio analysis and financial insights"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "redis",
    "openai",
    "pydantic",
    "python-dotenv",
    "requests",
    "pandas",
    "numpy",
    "langgraph",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false 